CircomParser.py
# Generated from CircomParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CircomParser ( Parser ):

    grammarFileName = "CircomParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'pragma'", "'circom'", "'custom_templates'", 
                     "'include'", "'component'", "'function'", "'template'", 
                     "'public'", "'var'", "'signal'", "'input'", "'output'", 
                     "'if'", "'else'", "'for'", "'while'", "'return'", "'assert'", 
                     "'log'", "'parallel'", "'main'", "'||'", "'&&'", "'=='", 
                     "'!='", "'<'", "'>'", "'<='", "'>='", "'|'", "'&'", 
                     "'<<'", "'>>'", "'+'", "'-'", "'*'", "'/'", "'\\'", 
                     "'%'", "'**'", "'^'", "'!'", "'~'", "'='", "'<--'", 
                     "'<=='", "'-->'", "'==>'", "'==='", "'?'", "':'", "'.'", 
                     "'_'", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", 
                     "';'", "'\\='", "'**='", "'+='", "'-='", "'*='", "'/='", 
                     "'%='", "'<<='", "'>>='", "'&='", "'|='", "'^='", "'++'", 
                     "'--'" ]

    symbolicNames = [ "<INVALID>", "PRAGMA", "CIRCOM", "CUSTOM_TEMPLATES", 
                      "INCLUDE", "COMPONENT", "FUNCTION", "TEMPLATE", "PUBLIC", 
                      "VAR", "SIGNAL", "INPUT", "OUTPUT", "IF", "ELSE", 
                      "FOR", "WHILE", "RETURN", "ASSERT", "LOG", "PARALLEL", 
                      "MAIN", "OR", "AND", "EQ", "NEQ", "LT", "GT", "LE", 
                      "GE", "OR_BIT", "AND_BIT", "SHIFTL", "SHIFTR", "PLUS", 
                      "MINUS", "MUL", "DIV", "INTDIV", "MOD", "POW", "XOR_BIT", 
                      "NOT", "COMPLEMENT", "ASSIGN_VAR", "ASSIGN_SIGNAL", 
                      "ASSIGN_CONSTRAINT_SIGNAL", "RIGHT_ASSIGN_SIGNAL", 
                      "RIGHT_ASSIGN_CONSTRAINT_SIGNAL", "CONSTRAINT_EQUALITY", 
                      "QUESTION", "COLON", "DOT", "UNDERLINE", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LSQUARE", "RSQUARE", 
                      "COMMA", "SEMICOLON", "INTDIVEQ", "POWEQ", "PLUSEQ", 
                      "MINUSEQ", "MULTEQ", "DIVEQ", "MODEQ", "SHIFTLEQ", 
                      "SHIFTREQ", "AND_BITEQ", "OR_BITEQ", "XOR_BITEQ", 
                      "INCREMENT", "DECREMENT", "DECNUMBER", "HEXNUMBER", 
                      "IDENTIFIER", "STRING", "WHITESPACE", "COMMENT", "MULTILINE_COMMENT" ]

    RULE_identifierList = 0
    RULE_pragma = 1
    RULE_include = 2
    RULE_program = 3
    RULE_publicList = 4
    RULE_mainComponent = 5
    RULE_definition = 6
    RULE_functionDefinition = 7
    RULE_templateDefinition = 8
    RULE_tagsList = 9
    RULE_signalType = 10
    RULE_signalHearder = 11
    RULE_simpleSymbol = 12
    RULE_complexSymbol = 13
    RULE_signalConstraintSymbol = 14
    RULE_signalSimpleSymbol = 15
    RULE_tupleInitialization = 16
    RULE_someSymbol = 17
    RULE_signalSymbol = 18
    RULE_declaration = 19
    RULE_substition = 20
    RULE_block = 21
    RULE_statement = 22
    RULE_parseElseStmt0NB = 23
    RULE_parseElseStatement1 = 24
    RULE_statement0 = 25
    RULE_stmt0NB = 26
    RULE_statement1 = 27
    RULE_statement2 = 28
    RULE_statementLog = 29
    RULE_statement3 = 30
    RULE_varAccess = 31
    RULE_arrayAcc = 32
    RULE_componentAcc = 33
    RULE_variable = 34
    RULE_listableExpression = 35
    RULE_listableWithInputNames = 36
    RULE_listableAnon = 37
    RULE_parseString = 38
    RULE_logExpression = 39
    RULE_logArgument = 40
    RULE_logListable = 41
    RULE_twoElemsListable = 42
    RULE_expression = 43
    RULE_parseExpression1 = 44
    RULE_expression14 = 45
    RULE_expression13 = 46
    RULE_expression12 = 47
    RULE_expression11 = 48
    RULE_expression10 = 49
    RULE_expression9 = 50
    RULE_expression8 = 51
    RULE_expression7 = 52
    RULE_expression6 = 53
    RULE_expression5 = 54
    RULE_expression4 = 55
    RULE_expression3 = 56
    RULE_expression2 = 57
    RULE_expressionAnonymous = 58
    RULE_expression1 = 59
    RULE_expression0 = 60
    RULE_assignOp = 61
    RULE_cmpOpCodes = 62
    RULE_shiftOp = 63
    RULE_addSubOp = 64
    RULE_mulDivOp = 65
    RULE_expressionPrefixOp = 66
    RULE_version = 67

    ruleNames =  [ "identifierList", "pragma", "include", "program", "publicList", 
                   "mainComponent", "definition", "functionDefinition", 
                   "templateDefinition", "tagsList", "signalType", "signalHearder", 
                   "simpleSymbol", "complexSymbol", "signalConstraintSymbol", 
                   "signalSimpleSymbol", "tupleInitialization", "someSymbol", 
                   "signalSymbol", "declaration", "substition", "block", 
                   "statement", "parseElseStmt0NB", "parseElseStatement1", 
                   "statement0", "stmt0NB", "statement1", "statement2", 
                   "statementLog", "statement3", "varAccess", "arrayAcc", 
                   "componentAcc", "variable", "listableExpression", "listableWithInputNames", 
                   "listableAnon", "parseString", "logExpression", "logArgument", 
                   "logListable", "twoElemsListable", "expression", "parseExpression1", 
                   "expression14", "expression13", "expression12", "expression11", 
                   "expression10", "expression9", "expression8", "expression7", 
                   "expression6", "expression5", "expression4", "expression3", 
                   "expression2", "expressionAnonymous", "expression1", 
                   "expression0", "assignOp", "cmpOpCodes", "shiftOp", "addSubOp", 
                   "mulDivOp", "expressionPrefixOp", "version" ]

    EOF = Token.EOF
    PRAGMA=1
    CIRCOM=2
    CUSTOM_TEMPLATES=3
    INCLUDE=4
    COMPONENT=5
    FUNCTION=6
    TEMPLATE=7
    PUBLIC=8
    VAR=9
    SIGNAL=10
    INPUT=11
    OUTPUT=12
    IF=13
    ELSE=14
    FOR=15
    WHILE=16
    RETURN=17
    ASSERT=18
    LOG=19
    PARALLEL=20
    MAIN=21
    OR=22
    AND=23
    EQ=24
    NEQ=25
    LT=26
    GT=27
    LE=28
    GE=29
    OR_BIT=30
    AND_BIT=31
    SHIFTL=32
    SHIFTR=33
    PLUS=34
    MINUS=35
    MUL=36
    DIV=37
    INTDIV=38
    MOD=39
    POW=40
    XOR_BIT=41
    NOT=42
    COMPLEMENT=43
    ASSIGN_VAR=44
    ASSIGN_SIGNAL=45
    ASSIGN_CONSTRAINT_SIGNAL=46
    RIGHT_ASSIGN_SIGNAL=47
    RIGHT_ASSIGN_CONSTRAINT_SIGNAL=48
    CONSTRAINT_EQUALITY=49
    QUESTION=50
    COLON=51
    DOT=52
    UNDERLINE=53
    LPAREN=54
    RPAREN=55
    LBRACE=56
    RBRACE=57
    LSQUARE=58
    RSQUARE=59
    COMMA=60
    SEMICOLON=61
    INTDIVEQ=62
    POWEQ=63
    PLUSEQ=64
    MINUSEQ=65
    MULTEQ=66
    DIVEQ=67
    MODEQ=68
    SHIFTLEQ=69
    SHIFTREQ=70
    AND_BITEQ=71
    OR_BITEQ=72
    XOR_BITEQ=73
    INCREMENT=74
    DECREMENT=75
    DECNUMBER=76
    HEXNUMBER=77
    IDENTIFIER=78
    STRING=79
    WHITESPACE=80
    COMMENT=81
    MULTILINE_COMMENT=82

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class IdentifierListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(CircomParser.IDENTIFIER)
            else:
                return self.getToken(CircomParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CircomParser.COMMA)
            else:
                return self.getToken(CircomParser.COMMA, i)

        def getRuleIndex(self):
            return CircomParser.RULE_identifierList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifierList" ):
                listener.enterIdentifierList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifierList" ):
                listener.exitIdentifierList(self)




    def identifierList(self):

        localctx = CircomParser.IdentifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_identifierList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 136
                    self.match(CircomParser.IDENTIFIER)
                    self.state = 137
                    self.match(CircomParser.COMMA) 
                self.state = 142
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 143
            self.match(CircomParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PragmaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRAGMA(self):
            return self.getToken(CircomParser.PRAGMA, 0)

        def CIRCOM(self):
            return self.getToken(CircomParser.CIRCOM, 0)

        def version(self):
            return self.getTypedRuleContext(CircomParser.VersionContext,0)


        def SEMICOLON(self):
            return self.getToken(CircomParser.SEMICOLON, 0)

        def CUSTOM_TEMPLATES(self):
            return self.getToken(CircomParser.CUSTOM_TEMPLATES, 0)

        def getRuleIndex(self):
            return CircomParser.RULE_pragma

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPragma" ):
                listener.enterPragma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPragma" ):
                listener.exitPragma(self)




    def pragma(self):

        localctx = CircomParser.PragmaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_pragma)
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.match(CircomParser.PRAGMA)
                self.state = 146
                self.match(CircomParser.CIRCOM)
                self.state = 147
                self.version()
                self.state = 148
                self.match(CircomParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.match(CircomParser.PRAGMA)
                self.state = 151
                self.match(CircomParser.CUSTOM_TEMPLATES)
                self.state = 152
                self.match(CircomParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INCLUDE(self):
            return self.getToken(CircomParser.INCLUDE, 0)

        def STRING(self):
            return self.getToken(CircomParser.STRING, 0)

        def SEMICOLON(self):
            return self.getToken(CircomParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CircomParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)




    def include(self):

        localctx = CircomParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(CircomParser.INCLUDE)
            self.state = 156
            self.match(CircomParser.STRING)
            self.state = 157
            self.match(CircomParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CircomParser.EOF, 0)

        def pragma(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CircomParser.PragmaContext)
            else:
                return self.getTypedRuleContext(CircomParser.PragmaContext,i)


        def include(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CircomParser.IncludeContext)
            else:
                return self.getTypedRuleContext(CircomParser.IncludeContext,i)


        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CircomParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(CircomParser.DefinitionContext,i)


        def mainComponent(self):
            return self.getTypedRuleContext(CircomParser.MainComponentContext,0)


        def getRuleIndex(self):
            return CircomParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = CircomParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 159
                self.pragma()
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 165
                self.include()
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6 or _la==7:
                self.state = 171
                self.definition()
                self.state = 176
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 177
                self.mainComponent()


            self.state = 180
            self.match(CircomParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PublicListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(CircomParser.LBRACE, 0)

        def PUBLIC(self):
            return self.getToken(CircomParser.PUBLIC, 0)

        def LSQUARE(self):
            return self.getToken(CircomParser.LSQUARE, 0)

        def identifierList(self):
            return self.getTypedRuleContext(CircomParser.IdentifierListContext,0)


        def RSQUARE(self):
            return self.getToken(CircomParser.RSQUARE, 0)

        def RBRACE(self):
            return self.getToken(CircomParser.RBRACE, 0)

        def getRuleIndex(self):
            return CircomParser.RULE_publicList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPublicList" ):
                listener.enterPublicList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPublicList" ):
                listener.exitPublicList(self)




    def publicList(self):

        localctx = CircomParser.PublicListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_publicList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.match(CircomParser.LBRACE)
            self.state = 183
            self.match(CircomParser.PUBLIC)
            self.state = 184
            self.match(CircomParser.LSQUARE)
            self.state = 185
            self.identifierList()
            self.state = 186
            self.match(CircomParser.RSQUARE)
            self.state = 187
            self.match(CircomParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainComponentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMPONENT(self):
            return self.getToken(CircomParser.COMPONENT, 0)

        def MAIN(self):
            return self.getToken(CircomParser.MAIN, 0)

        def ASSIGN_VAR(self):
            return self.getToken(CircomParser.ASSIGN_VAR, 0)

        def expression(self):
            return self.getTypedRuleContext(CircomParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(CircomParser.SEMICOLON, 0)

        def publicList(self):
            return self.getTypedRuleContext(CircomParser.PublicListContext,0)


        def getRuleIndex(self):
            return CircomParser.RULE_mainComponent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainComponent" ):
                listener.enterMainComponent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainComponent" ):
                listener.exitMainComponent(self)




    def mainComponent(self):

        localctx = CircomParser.MainComponentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mainComponent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(CircomParser.COMPONENT)
            self.state = 190
            self.match(CircomParser.MAIN)
            self.state = 192
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==56:
                self.state = 191
                self.publicList()


            self.state = 194
            self.match(CircomParser.ASSIGN_VAR)
            self.state = 195
            self.expression()
            self.state = 196
            self.match(CircomParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDefinition(self):
            return self.getTypedRuleContext(CircomParser.FunctionDefinitionContext,0)


        def templateDefinition(self):
            return self.getTypedRuleContext(CircomParser.TemplateDefinitionContext,0)


        def getRuleIndex(self):
            return CircomParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)




    def definition(self):

        localctx = CircomParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_definition)
        try:
            self.state = 200
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 198
                self.functionDefinition()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 199
                self.templateDefinition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(CircomParser.FUNCTION, 0)

        def IDENTIFIER(self):
            return self.getToken(CircomParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(CircomParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(CircomParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(CircomParser.BlockContext,0)


        def identifierList(self):
            return self.getTypedRuleContext(CircomParser.IdentifierListContext,0)


        def getRuleIndex(self):
            return CircomParser.RULE_functionDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDefinition" ):
                listener.enterFunctionDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDefinition" ):
                listener.exitFunctionDefinition(self)




    def functionDefinition(self):

        localctx = CircomParser.FunctionDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_functionDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self.match(CircomParser.FUNCTION)
            self.state = 203
            self.match(CircomParser.IDENTIFIER)
            self.state = 204
            self.match(CircomParser.LPAREN)
            self.state = 206
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==78:
                self.state = 205
                self.identifierList()


            self.state = 208
            self.match(CircomParser.RPAREN)
            self.state = 209
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TemplateDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEMPLATE(self):
            return self.getToken(CircomParser.TEMPLATE, 0)

        def IDENTIFIER(self):
            return self.getToken(CircomParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(CircomParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(CircomParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(CircomParser.BlockContext,0)


        def CUSTOM_TEMPLATES(self):
            return self.getToken(CircomParser.CUSTOM_TEMPLATES, 0)

        def PARALLEL(self):
            return self.getToken(CircomParser.PARALLEL, 0)

        def identifierList(self):
            return self.getTypedRuleContext(CircomParser.IdentifierListContext,0)


        def getRuleIndex(self):
            return CircomParser.RULE_templateDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplateDefinition" ):
                listener.enterTemplateDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplateDefinition" ):
                listener.exitTemplateDefinition(self)




    def templateDefinition(self):

        localctx = CircomParser.TemplateDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_templateDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 211
            self.match(CircomParser.TEMPLATE)
            self.state = 213
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 212
                self.match(CircomParser.CUSTOM_TEMPLATES)


            self.state = 216
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 215
                self.match(CircomParser.PARALLEL)


            self.state = 218
            self.match(CircomParser.IDENTIFIER)
            self.state = 219
            self.match(CircomParser.LPAREN)
            self.state = 221
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==78:
                self.state = 220
                self.identifierList()


            self.state = 223
            self.match(CircomParser.RPAREN)
            self.state = 224
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TagsListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(CircomParser.LBRACE, 0)

        def identifierList(self):
            return self.getTypedRuleContext(CircomParser.IdentifierListContext,0)


        def RBRACE(self):
            return self.getToken(CircomParser.RBRACE, 0)

        def getRuleIndex(self):
            return CircomParser.RULE_tagsList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTagsList" ):
                listener.enterTagsList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTagsList" ):
                listener.exitTagsList(self)




    def tagsList(self):

        localctx = CircomParser.TagsListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_tagsList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 226
            self.match(CircomParser.LBRACE)
            self.state = 227
            self.identifierList()
            self.state = 228
            self.match(CircomParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SignalTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INPUT(self):
            return self.getToken(CircomParser.INPUT, 0)

        def OUTPUT(self):
            return self.getToken(CircomParser.OUTPUT, 0)

        def getRuleIndex(self):
            return CircomParser.RULE_signalType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSignalType" ):
                listener.enterSignalType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSignalType" ):
                listener.exitSignalType(self)




    def signalType(self):
